Fixed conversion to List in the method of receiving all products in the service